[package]
name = "busylib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["json", "local-time", "std"] }
time = "0.3.14"
arc-swap = "1.5.1"
once_cell = "1.15.0"
magic-crypt = "3.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
